--- a/about.css
+++ b/about.css
@@ -6,6 +6,7 @@
 
 #about div {
   display: flex;
+  flex-direction: column;
   gap: 8px;
   justify-content: center;
   margin-top: 16px;
@@ -15,13 +16,22 @@
   width: 100%;
   background-color: #9ac8ed;
   padding: 12px 18px;
-  max-width: 186px;
   border-radius: 8px;
-  box-shadow: 0 1px 10px rgba(0, 0, 0, .6);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.6);
 }
 
 #about div article h3 {
-    margin-bottom: 16px;
-    text-align: center;
-    height: 32px;
+  margin-bottom: 16px;
+  text-align: center;
+  height: 32px;
+}
+
+@media (min-width: 768px) {
+  #about div {
+    flex-direction: row;
+  }
+
+  #about div article {
+    max-width: 186px;
+  }
 }
