--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  background-color: border-box;
 }
 
+html {
+  width: 100%; /* calc(100vw - (100vw - 100%)); */
+
+}
 body {
   font-family: "Courier New", Courier, monospace;
-  width: calc(100vw - (100vw - 100%));
+  width: 100%;
 }
